cards,show,header

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,15 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="container mt-2">
+  <h1>Dashboard</h1>
+  <div class="d-flex card rounded-4">
+    <div class="card-body ">
+      <div class="d-flex align-items-center justify-content-between">
+        <h1 class="mb-0"><i class="fa-solid fa-circle-arrow-down"></i></h1>
+          <div class="flex-column justify-content-center d-flex flex-grow-1 px-3">
+            <div >Transaction</div>
+            <div >28.March.2022</div>
+          </div>
+        <div>$$$</div>
+      </div>
+    </div>
+  </div>
+</div>
