--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -1,13 +1,9 @@
-<h2><%= @transaction.status %></h2>
-<p><%= @transaction.id %></p>
-<p><%= @transaction.timestamp %></p>
-<p><%= @transaction.status %></p>
-<p><%= @transaction.customer_name %></p>
-<p><%= @transaction.reference %></p>
-<p><%= link_to "New Transaction",
-  new_transaction_path(@transaction)
-%></p>
-<p><%= link_to "All Transaction",
-  transaction_path
-%></p>
-
+<div class="container">
+  <h2><%= @transaction.status %></h2>
+    <p><%= @transaction.id %></p>
+    <p><%= @transaction.timestamp %></p>
+    <p><%= @transaction.status %></p>
+    <p><%= @transaction.customer_name %></p>
+    <p><%= @transaction.reference %></p>
+    <p><%= link_to "All Transaction", transaction_path%></p>
+</div>
