--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -11,7 +11,7 @@ $body-bg:                white;
 $font-size-base:         1rem;
 
 // Colors
-$body-color: white;
+$body-color: rgb(0, 0, 0);
 $primary:    $blue;
 $success:    $green;
 $info:       $yellow;
