--- a/app/assets/stylesheets/components/_header.scss
+++ b/app/assets/stylesheets/components/_header.scss
@@ -1,7 +1,7 @@
 header {
   background-color: #ffffff;
   font-size: 14px;
-  position: fixed;
+  position: sticky;
   top: 0;
   width: 100%;
   margin-bottom: 20px;
