--- a/app/assets/stylesheets/components/_header.scss
+++ b/app/assets/stylesheets/components/_header.scss
@@ -1,14 +1,10 @@
 header {
   background-color: #ffffff;
-  font-size: 14px;
-  position: fixed;
+  position: sticky;
   top: 0;
   width: 100%;
-  margin-bottom: 20px;
 }
 
 header h2 {
   color: #2a2a2a;
-  text-decoration: none;
-  font-weight: none;
 }
