--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -1,9 +1,18 @@
-<div class="container">
-  <h2><%= @transaction.status %></h2>
-    <p><%= @transaction.id %></p>
-    <p><%= @transaction.timestamp %></p>
-    <p><%= @transaction.status %></p>
-    <p><%= @transaction.customer_name %></p>
-    <p><%= @transaction.reference %></p>
-    <p><%= link_to "All Transaction", transaction_path%></p>
-</div>
+
+    <div class="d-flex card rounded-4 my-2">
+      <div class="card-body ">
+        <div class="d-flex align-items-center justify-content-between">
+        <% if @transaction.status %>
+          <h1 class="mb-0 text-success"><i class="fa-solid fa-circle-arrow-down"></i></h1>
+        <% else %>
+          <h1 class="mb-0 text-danger"><i class="fa-solid fa-circle-arrow-down"></i></h1>
+        <% end %>
+            <div class="flex-column justify-content-center d-flex flex-grow-1 px-3">
+              <div><%= @transaction.customer_name %></div>
+              <div><p class="text-secondary"><%= @transaction.timestamp %><p></div>
+            </div>
+          <div><%= humanized_money_with_symbol(@transaction.price) %></div>
+        </div>
+      </div>
+    </div>
+
