--- a/app/views/pages/qr_generator.html.erb
+++ b/app/views/pages/qr_generator.html.erb
@@ -4,7 +4,7 @@
     </div>
 
     <div class="center">
-      <%= link_to 'Download', root_path, class: "btn btn-primary round shadow" %>
+      <%= link_to 'Download', qr_code_download_path(format: :svg), class: "btn btn-primary round shadow" %>
     </div>
   </div>
 </div>
