--- a/app/views/transactions/show.html.erb
+++ b/app/views/transactions/show.html.erb
@@ -1,4 +1,5 @@
-<h1>Transaction </h1>
+<div class="container my-3">
+  <h1>Transaction </h1>
   <div class="d-flex card rounded-4 my-2">
     <div class="card-body ">
       <div class="d-flex align-items-center justify-content-between">
@@ -15,3 +16,4 @@
       </div>
     </div>
   </div>
+ </div>
