--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,18 +1,11 @@
-<div class="container mt-2">
-  <h1>Dashboard</h1>
-  <div class="d-flex card rounded-4">
-    <div class="card-body ">
-      <div class="d-flex align-items-center justify-content-between">
-        <h1 class="mb-0"><i class="fa-solid fa-circle-arrow-down"></i></h1>
-          <div class="flex-column justify-content-center d-flex flex-grow-1 px-3">
-            <div >Transaction</div>
-            <div >28.March.2022</div>
-          </div>
-        <div>$$$</div>
-      </div>
-    </div>
+<br>
+<h1>Coconut Bar</h1>
+<div class="container center mt-2">
+
+  <div class="card center my-5" style="width: 18rem;">
+  <img src="https://images.pexels.com/photos/1803516/pexels-photo-1803516.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" class="card-img-top" alt="...">
+  <div class="card-body">
+    <p class="card-text">Currently you are selling Fresh Coconuts</p>
   </div>
 </div>
-
-
-
+</div>
