--- a/app/views/transactions/index.html.erb
+++ b/app/views/transactions/index.html.erb
@@ -2,23 +2,23 @@
   <h1>Transactions</h1>
   <div class="cards-grid-2 mt-1">
   <% @transactions.each do |transaction| %>
-    <div class="d-flex card rounded-4 my-2">
+    <%= link_to transaction_path(transaction), class: "d-flex card rounded-4 my-2 text-decoration-none" do %>
       <div class="card-body ">
         <div class="d-flex align-items-center justify-content-between">
         <% if transaction.status %>
           <h1 class="mb-0 text-success"><i class="fa-solid fa-circle-arrow-down"></i></h1>
         <% else %>
           <h1 class="mb-0 text-danger"><i class="fa-solid fa-circle-arrow-down"></i></h1>
-          <% end %>
-            <div class="flex-column justify-content-center d-flex flex-grow-1 px-3">
-              <div><%= transaction.customer_name %></div>
-              <div><p class="text-secondary"><%= transaction.timestamp %><p></div>
-            </div>
+        <% end %>
+          <div class="flex-column justify-content-center d-flex flex-grow-1 px-3">
+            <div><%= transaction.customer_name %></div>
+            <div><p class="text-secondary"><%= transaction.timestamp %><p></div>
+          </div>
           <div><%= humanized_money_with_symbol(transaction.price) %></div>
         </div>
       </div>
-    </div>
     <% end %>
+  <% end %>
   </div>
   <p class="text-secondary">Updated: <%= Time.now %></p>
 </div>
