--- a/app/views/transactions/index.html.erb
+++ b/app/views/transactions/index.html.erb
@@ -1,4 +1,4 @@
-<div class="container my-3">
+<div class="container my-3 pt-16">
   <h1>Transactions</h1>
   <div class="cards-grid-2 mt-1">
   <% @transactions.each do |transaction| %>
