--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,6 +1,8 @@
-<header class="border">
-<div class="d-flex justify-content-around py-2 mt-1 border-bottom border-grey">
-<h2><i class="fa-regular fa-circle-user"></i>
-</h2><h2 class="">PaidFast</h2>
-<h2><i class="fa-regular fa-bell"></i></h2></div>
+<header><div class="my-navbar">
+  <div class="d-flex justify-content-around py-2 mt-1 border-bottom border-grey">
+    <h2><i class="fa-regular fa-circle-user"></i>
+    </h2><h2 class="">PaidFast</h2>
+    <h2><i class="fa-regular fa-bell"></i></h2>
+  </div>
+</div>
 </header>
