--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,11 +1,10 @@
-<br>
-<h1 class="main-title">Coconut Bar</h1>
-<div class="container center mt-2">
+<div class="container">
+  <%= line_chart @amount_by_day %>
+  <%= column_chart @amount_by_day %>
 
-  <div class="card center rounded-5 my-2" style="width: 18rem;">
-  <img src="https://images.pexels.com/photos/1803516/pexels-photo-1803516.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" class="card-img-top" alt="...">
-  <div class="card-body">
-    <p class="card-text">Currently you are selling Fresh Coconuts</p>
-  </div>
-</div>
+  <%= line_chart @amount_by_week %>
+  <%= column_chart @amount_by_week %>
+
+  <%= column_chart @amount_by_month %>
+  <%= line_chart @amount_by_month %>
 </div>
