--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,9 +1,10 @@
-<% if current_user.product.present? %>
-  <h5>Here is Your Product Information</h5>
-<% else %>
+
   <h5>Create A Product to start receiving payment</h5>
   <form action="/products" method="POST" data-turbo="false">
     <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
-    <input type="submit" name="commit" value="Create Stripe Account">
+    <label for="name">Name Of product</label><br>
+    <input type="text" id="name" name="product[name]" value=""><br>
+    <label for="description">Description</label><br>
+    <input type="text" id="description" name="product[description]" value=""><br>
+    <input type="submit" name="commit" value="Get Started">
   </form>
-<% end %>
