--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,11 +11,11 @@
 @import "components/index";
 @import "pages/index";
 
-.homepage-container {
-  display: grid;
-  grid-template-rows: auto 1fr auto;
-  min-height: 100vh;
-}
+// .homepage-container {
+//   display: grid;
+//   grid-template-rows: auto 1fr auto;
+//   min-height: 100vh;
+// }
 body {
   padding-top: 50px;
   padding-bottom: 100px;
