--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,10 +14,10 @@
   </head>
 
   <body>
-    <div class="homepage-container">
+    <%# <div class="homepage-container"> %>
       <%= render "shared/header" %>
       <div class="main-content"><%= yield %></div>
       <%= render "shared/footer"%>
-    </div>
+    <%# </div> %>
   </body>
 </html>
