--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,10 +1,33 @@
 <div class="container">
-  <%= line_chart @amount_by_day %>
-  <%= column_chart @amount_by_day %>
 
-  <%= line_chart @amount_by_week %>
-  <%= column_chart @amount_by_week %>
+  <div class="d-flex cards-grid-2 mt-1 p-3 mr-3">
+    <div class="carddash p-4 mx-3">
+      <div class="mb-4">
+        <p class="mb-4"> Today</p>
+        <h3><%= @sum_today %></h3>
+      </div>
+    </div>
 
-  <%= column_chart @amount_by_month %>
-  <%= line_chart @amount_by_month %>
+    <div class="carddash p-4 mx-3">
+      <div class="mb-4">
+        <p> Balance</p>
+        <h3><%= @sum_today %></h3>
+      </div>
+    </div>
+  </div>
+
+  <div class="mb-4">
+    <p> This week</p>
+    <%= column_chart @amount_this_week, colors: ["#560BAD", "#4895EF"], refresh: 3, ytitle: "£"  %>
+  </div>
+
+  <div class="mb-4">
+    <p> Weekly overtime</p>
+    <%= line_chart @amount_by_week, colors: ["#4895EF"], label: "weekly overtime", refresh: 3, ytitle: "£" %>
+  </div>
+
+  <div>
+    <p> Monthly overtime</p>
+    <%= line_chart @amount_by_month, colors: ["#B5179E"], label: "monthly overtime", refresh: 3, ytitle: "£"  %>
+  </div>
 </div>
