--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,4 +1,4 @@
-
+  <% if current_user.product.blank? %>
   <h5>Create A Product to start receiving payment</h5>
   <form action="/products" method="POST" data-turbo="false">
     <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
@@ -8,3 +8,7 @@
     <input type="text" id="description" name="product[description]" value=""><br>
     <input type="submit" name="commit" value="Get Started">
   </form>
+
+  <% else %>
+  <p>A Button that says Receive Payment</p>
+  <% end %>
