--- a/app/assets/stylesheets/components/_header.scss
+++ b/app/assets/stylesheets/components/_header.scss
@@ -1,12 +1,31 @@
 header {
-  background-color: #ffffff;
+  background-color: #E2EDFB;
   font-size: 14px;
   position: fixed;
   top: 0;
   width: 100%;
   z-index: 9999;
+  border: none;
+}
+i {
+  font-size: 1.5em;
+  color: #b5179e;
+  padding: 5px;
 }
 
 header h2 {
   color: #2a2a2a;
+}
+
+.navbar-lewagon {
+  justify-content: space-between;
+  background: #7209b7;
+}
+
+.navbar-lewagon .navbar-collapse {
+  flex-grow: 0;
+}
+
+.navbar-lewagon .navbar-brand img {
+  width: 40px;
 }
