--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,36 +1,32 @@
-  <footer class="border">
+  <footer class="">
 
-    <div class="d-flex p-1 justify-content-between align-items-center">
-
-      <div class="d-flex p-1 align-items-center justify-content-center">
-        <%= link_to "/" do %>
-            <h2 class="text-center"><i class="fa-solid fa-house"></i></h2>
-            <h5 class="text-center">Home</h5>
+  <button class="btn btnfooter">
+  <%= link_to "/" do %>
+   <span class="fa-solid fa-house ">
+  </span>
         <% end %>
-      </div>
+  </button>
 
-      <div class="d-flex p-1 align-items-center justify-content-center">
-        <%= link_to "/transactions" do %>
-            <h2 class="text-center"><i class="fa-solid fa-receipt"></i></h2>
-            <h5 class="text-center">Receive</h5>
+  <button class="btn btnfooter">
+     <%= link_to "/transactions" do %>
+    <span class="fa-solid fa-receipt">
+  </span>
         <% end %>
-      </div>
+  </button>
 
-      <div class="d-flex p-1 align-items-center justify-content-center">
-        <%= link_to "/qr-code" do %>
-            <h2 class="text-center"><i class="fa-solid fa-qrcode"></i></h2>
-            <h5 class="text-center">QR Code</h5>
+    <button class="btn btnfooter">
+      <%= link_to "/qr-code" do %>
+      <span class="fa-solid fa-qrcode">
+  </span>
         <% end %>
-      </div>
 
-      <div class="d-flex p-1 align-items-center justify-content-center">
-        <%= link_to "#" do %>
-            <h2 class="text-center"><i class="fa-solid fa-gear"></i></h2>
-            <h5 class="text-center">Settings</h5>
-        <% end %>
-      </div>
+  </button>
 
-    </div>
-
+    <button class="btn btnfooter">
+     <%= link_to "#" do %>
+      <span class="fa-solid fa-gear">
+  </span>
+         <% end %>
+  </button>
 
   </footer>
