--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,8 +1,25 @@
-<header><div class="my-navbar">
-  <div class="d-flex justify-content-around py-2 mt-1 border-bottom border-grey">
-    <h2><i class="fa-regular fa-circle-user"></i>
-    </h2><h2 class="">PaidFast</h2>
-    <h2><i class="fa-regular fa-bell"></i></h2>
+<header>
+
+<div class="my-navbar">
+  <div class="d-flex justify-content-between px-3 pt-2 mt-1">
+    <%= image_tag "paidfastlogo.png", class: "avatar avatar-xs", data: { titi: "toto" } %>
+    <div class="show" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto">
+        <% if user_signed_in? %>
+          <li class="nav-item dropdown">
+               <i class="fa-solid fa-user avatar dropdown-toggle" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></i>
+            <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
+              <%= link_to "Account", "#", class: "dropdown-item" %>
+              <%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete}, class: "dropdown-item" %>
+            </div>
+          </li>
+        <% else %>
+          <li class="nav-item">
+            <%= link_to "Login", new_user_session_path, class: "nav-link" %>
+          </li>
+        <% end %>
+      </ul>
+    </div>
   </div>
 </div>
 </header>
