--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -18,7 +18,7 @@
 
   <div class="mb-4">
     <p> This week</p>
-    <%= column_chart @amount_this_week, colors: ["#560BAD", "#4895EF"], refresh: 3, ytitle: "£"  %>
+    <%= column_chart @amount_this_week, colors: ["#560BAD", "#4895EF"], ytitle: "£"  %>
   </div>
 
   <div class="mb-4">
