--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -2,8 +2,9 @@
   width: 190px;
   height: 150px;
   border-radius: 30px;
-  background: #7209B7;
-  color: white;
+  background: linear-gradient(145deg, #E2EDFB, #f0f0f0);
+  color: #480CA8;
+  font-weight: 500;
   box-shadow: 15px 15px 30px #bebebe,
              -15px -15px 30px #ffffff;
 }
