--- a/app/assets/stylesheets/components/_header.scss
+++ b/app/assets/stylesheets/components/_header.scss
@@ -6,10 +6,11 @@ header {
   width: 100%;
   z-index: 9999;
   border: none;
+  padding-bottom: 5px;
 }
-i {
+header i {
   font-size: 1.5em;
-  color: #b5179e;
+  color: #7375D2;
   padding: 5px;
 }
 
