--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -1,1 +1,10 @@
 
+.cardtransaction {
+  justify-items: center;
+  width: 250px;
+  height: 400px;
+  border-radius: 30px;
+  background: #E2EDFB;
+  box-shadow: 15px 15px 30px #bebebe,
+             -15px -15px 30px #ffffff;
+}
