--- a/app/views/transactions/show.html.erb
+++ b/app/views/transactions/show.html.erb
@@ -1,20 +1,18 @@
-<div class="container my-3">
-  <h1>Transaction </h1>
-  <div class="d-flex card rounded-4 my-2">
-    <div class="card-body ">
-      <div class="d-flex align-items-center justify-content-between">
-      <% if @transaction.status %>
-        <h1 class="mb-0 text-success"><i class="fa-solid fa-circle-arrow-down"></i></h1>
-      <% else %>
-        <h1 class="mb-0 text-danger"><i class="fa-solid fa-circle-arrow-down"></i></h1>
-      <% end %>
-          <div class="flex-column justify-content-center d-flex flex-grow-1 px-3">
-            <div><%= @transaction.customer_name %></div>
-            <div><p class="text-secondary"><%= @transaction.timestamp %><p></div>
-          </div>
-        <div><%= humanized_money_with_symbol(@transaction.price) %></div>
+ <div class="container my-3">
+    <div class="cardtransaction mx-auto">
+      <div class="card-body ">
+        <div class="">
+            <div class="">
+              <div><%= @transaction.customer_name %></div>
+              <div><p class="text-secondary"><%= @transaction.timestamp %><p></div>
+            </div>
+          <div><%= humanized_money_with_symbol(@transaction.price) %></div>
+        </div>
+         <% if @transaction.status %>
+            <h1 class="mb-0 text-success"><i class="fa-regular fa-circle-check"></i></h1>
+          <% else %>
+            <h1 class="mb-0 text-danger"><i class="fa-solid fa-hourglass-half"></i></h1>
+          <% end %>
       </div>
     </div>
   </div>
- </div>
-
