moved dashboard ccontent to /dashboard page

--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -3,7 +3,7 @@
   height: 150px;
   border-radius: 30px;
   background: linear-gradient(145deg, #E2EDFB, #f0f0f0);
-  color: #480CA8;
+  color: #4361EE;
   font-weight: 500;
   box-shadow: 15px 15px 30px #bebebe,
              -15px -15px 30px #ffffff;
