--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,34 +1,1 @@
-<div class="container">
-
-  <div class="d-flex cards-grid-2 mt-1 p-3 mr-3">
-    <div class="carddash p-4 mx-3">
-      <div class="mb-4">
-        <p class="mb-4"> Today</p>
-        <h2><%= @sum_today %></h2>
-      </div>
-    </div>
-
-    <div class="carddash p-4 mx-3">
-      <div class="mb-4">
-        <p class="mb-4"> Balance</p>
-        <h2><%= @sum_today %></h2>
-      </div>
-    </div>
-  </div>
-
-  <div class="mb-4 dash p-4">
-    <p class="text-secondary"> This week</p>
-    <%= column_chart @amount_this_week, colors: ["#560BAD", "#4895EF"], ytitle: "£" %>
-  </div>
-
-  <div class="mb-4 dash p-4">
-    <p class="text-secondary"> Weekly overtime</p>
-    <%= line_chart @amount_by_week, colors: ["#4895EF"], label: "weekly overtime", refresh: 3, ytitle: "£" %>
-  </div>
-
-  <div class="mb-4 dash p-4">
-    <p class="text-secondary"> Monthly overtime</p>
-    <%= line_chart @amount_by_month, colors: ["#4CC9F0"], label: "monthly overtime", refresh: 3, ytitle: "£"  %>
-  </div>
-
-</div>
+<h1>home</h1>
