--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,7 +1,7 @@
   <footer class="">
 
   <button class="btn btnfooter">
-  <%= link_to "/" do %>
+  <%= link_to "/dashboard" do %>
    <span class="fa-solid fa-house ">
   </span>
         <% end %>
