--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -2,7 +2,7 @@
 
   <button class="btn btnfooter">
   <%= link_to "/dashboard" do %>
-   <span class="fa-solid fa-house ">
+   <span class="fa-solid fa-chart-line">
   </span>
         <% end %>
   </button>
