--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,17 +11,18 @@
 @import "components/index";
 @import "pages/index";
 
-.homepage-container {
-  max-width: 100%;
-  display: grid;
-  grid-template-rows: auto 1fr auto;
-  grid-template-columns: 1fr;
-  min-height: 100vh;
-}
+// .homepage-container {
+//   max-width: 100%;
+//   display: grid;
+//   grid-template-rows: auto 1fr auto;
+//   grid-template-columns: 1fr;
+//   min-height: 100vh;
+// }
 body {
   padding-top: 50px;
   padding-bottom: 100px;
   background-color: #E4EDFD;
+  // background-color: #EEF0F4;
 }
 .main-content {
   padding-top: 16px;
