--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,10 +1,12 @@
 footer {
   margin: 0;
   background: linear-gradient(145deg,#E2EDFB 0% #f0f0f0 100%);
+  // background: linear-gradient(145deg,#EEF0F4 0% #f0f0f0 100%);
   justify-content: space-evenly;
   display: flex;
   align-items: center;
   background-color: #E4EDFD;
+  // background-color: #EEF0F4;
   padding: 10px 20px;
   position: fixed;
   bottom: 0;
@@ -24,10 +26,26 @@ footer {
   outline: none;
   margin: 0px;
   background: linear-gradient(145deg, #E2EDFB, #f0f0f0);
+  // background: linear-gradient(145deg,#EEF0F4, #f0f0f0);
   box-shadow:  5px 5px 10px #bebebe,
   -5px -5px 10px #ffffff;
   color: rgb(2, 2, 2);
 }
+
+.btnindent {
+  position: fill;
+  padding: 0;
+  height: 5em;
+  width: 5em;
+  border-radius: 50%;
+  outline: none;
+  margin: 0px;
+  background: linear-gradient(145deg, #E2EDFB, #f0f0f0);
+  // background: linear-gradient(145deg,#EEF0F4, #f0f0f0);
+  box-shadow: inset 9.91px 9.91px 15px #D9DADE, inset -9.91px -9.91px 15px #FFFFFF;
+  color: rgb(2, 2, 2);
+}
+
 .btn span {
   font-size: 2em;
 }
@@ -35,4 +53,9 @@ footer {
 footer a {
   color: #7375D2;
   text-decoration: none;
+}
+
+.btn {
+  outline: none;
+  border: none !important;
 }
