--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -2,9 +2,9 @@
 
 // For example:
 $red: #FD1015;
-$blue: #219EBC;
+$blue: #7375D2;
 $yellow: #FFC65A;
 $orange: #E67E22;
-$green: #1EDD88;
+$green: #10B981;
 $gray: #0E0000;
 $light-gray: #F4F4F4;
