--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -3,7 +3,7 @@
 <div class="my-navbar">
   <div class="d-flex justify-content-between px-3 pt-2 mt-1">
     <%= link_to root_path do %>
-    <%= image_tag "paidfastlogo.png", class: "avatar avatar-xs", data: { titi: "toto" } %>
+    <%= image_tag "vectorlogo.svg", class: "avatar avatar-xs", data: { titi: "toto" } %>
     <% end  %>
     <div class="show" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto">
