--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -1,10 +1,22 @@
 
 .cardtransaction {
-  justify-items: center;
+  margin-top: 50px;
   width: 250px;
+  padding: 10px;
   height: 400px;
   border-radius: 30px;
   background: #E2EDFB;
   box-shadow: 15px 15px 30px #bebebe,
              -15px -15px 30px #ffffff;
 }
+
+i {
+  font-size: 5rem;
+  color: #52b788;
+}
+
+#image {
+  /* the image you want to 'watermark' */
+  height: 30px; /* or whatever, equal to the image you want 'watermarked' */
+  width: 30px; /* as above */
+  }
