--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -10,9 +10,13 @@
              -15px -15px 30px #ffffff;
 }
 
-i {
-  font-size: 5rem;
+.ishow {
+  font-size: 4rem;
   color: #52b788;
+}
+.arrow {
+  color: #7375D2;
+  font-size: 2rem;
 }
 
 #image {
