--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,11 +1,15 @@
   <%# <% if current_user.product.blank? %>
-  <h5>Create A Product to start receiving payment</h5>
-  <%= simple_form_for @product do |f| %>
-  <%= f.input :name, label: 'Merchant Name' %>
-  <%= f.input :photo, as: :file %>
-  <%= f.input :description, label: 'Business Description' %>
-  <%= f.button :submit, 'Get Started' %>
-  <% end %>
+  <div class="container m-2">
+    <h5>Create A Product to start receiving payment</h5>
+    <%= simple_form_for @product, input_html: { class: 'form-control' } do |f| %>
+    <%= f.input :name, label: 'Merchant Name'%>
+    <%= f.input :photo, as: :file %>
+    <%= f.input :description, label: 'Business Description' %>
+    <%= f.button :submit, 'Get Started', class: 'submit'  %>
+    <% end %>
+  </div>
+
+
 
 
   <%# <% else %>
