--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -2,12 +2,11 @@
   display: block;
   width: 100%;
   height: calc(1.5em + 1.2rem + 0.0625rem);
-  padding: 0.6rem 0.75rem;
   font-size: 1rem;
   font-weight: 300;
   line-height: 1.5;
   color: #44476A;
-  background-color: #e6e7ee;
+  background-color: #e0e2f2;
   background-clip: padding-box;
   border: 0.0625rem solid #D1D9E6;
   border-radius: 0.55rem;
@@ -17,7 +16,69 @@
 
 .submit {
   font-size: 1rem;
-      border-color: #D1D9E6;
-      box-shadow: 3px 3px 6px #b8b9be, -3px -3px 6px #fff;
-      padding: 10px;
+  border-color: #D1D9E6 !important;
+  box-shadow: 3px 3px 6px #b8b9be, -3px -3px 6px #fff;
+  padding: 10px;
   }
+
+btn2 {
+padding: 15px 25px !important;
+border: unset !important;
+border-radius: 15px!important;
+color: #212121 !important;
+z-index: 1 !important;
+background: #e8e8e8 !important;
+position: relative;
+font-weight: 1000;
+font-size: 17px;
+-webkit-box-shadow: 4px 8px 19px -3px rgba(0,0,0,0.27) !important;
+box-shadow: 4px 8px 19px -3px rgba(0,0,0,0.27) !important;
+transition: all 250ms !important;
+overflow: hidden !important;
+
+&:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 0;
+  border-radius: 15px;
+  background-color: #212121;
+  z-index: -1;
+  -webkit-box-shadow: 4px 8px 19px -3px rgba(0,0,0,0.27);
+  box-shadow: 4px 8px 19px -3px rgba(0,0,0,0.27);
+  transition: all 250ms
+}
+
+&:hover {
+  color: #e8e8e8;
+
+  &:hover:before {
+    width: 100%;
+  }
+}
+}
+
+// btn2::before {
+// content: "";
+// position: absolute;
+// top: 0;
+// left: 0;
+// height: 100%;
+// width: 0;
+// border-radius: 15px;
+// background-color: #212121;
+// z-index: -1;
+// -webkit-box-shadow: 4px 8px 19px -3px rgba(0,0,0,0.27);
+// box-shadow: 4px 8px 19px -3px rgba(0,0,0,0.27);
+// transition: all 250ms
+// }
+
+// btn2:hover {
+// color: #e8e8e8;
+// }
+
+// btn2:hover::before {
+// width: 100%;
+// }
