--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -1,9 +1,9 @@
 // Import Google fonts
-@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;1,200;1,300;1,400;1,600;1,700;1,800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 // Define fonts for body and headers
-$body-font: 'Nunito Sans', sans-serif;
-$headers-font: 'Nunito Sans', sans-serif;
+$body-font: 'Roboto', sans-serif;
+$headers-font: 'Roboto', sans-serif;
 
 
 // To use a font file (.woff) uncomment following lines
