--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,6 +1,6 @@
   <%# <% if current_user.product.blank? %>
-  <div class="container m-2">
-    <h5>Create A Product to start receiving payment</h5>
+  <div class="container mt-3 p-4 shadow">
+    <h5 class="d-flex text-secondary justify-content-center mb-3">Create merchant account</h5>
     <%= simple_form_for @product, input_html: { class: 'form-control' } do |f| %>
     <%= f.input :name, label: 'Merchant Name'%>
     <%= f.input :photo, as: :file %>
