--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -20,3 +20,13 @@
 .text {
   color: rgb(53, 67, 67) !important;
 }
+
+.transact {
+  background-color: #4361EE;
+  color: white !important;
+
+}
+
+textdate {
+  color: rgb(92, 90, 90) !important;
+}
