--- a/app/views/transactions/show.html.erb
+++ b/app/views/transactions/show.html.erb
@@ -12,7 +12,6 @@
         </div>
       </div>
         <div class="text-center">
-        <div class="justify-content-left">
               <% if @transaction.status == "successful" %>
                 <i class="fa-regular fa-circle-check ishow"></i>
                 <h5>You have received</h5>
@@ -27,12 +26,11 @@
               <% end %>
             </div>
             </div>
-             <div class="d-flex-row bottom">
-             <%= link_to "/transactions" do %>
+          <div class="d-flex-row justify-content-end">
+              <%= link_to "/transactions" do %>
               <i class="fa-solid fa-arrow-left arrow"></i>
               <% end %>
-              </div>
-             </div>
-        </div>
+          </div>
+    </div>
   </div>
 </div>
