--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= meta_title %></title>
+    <title><%= PaidFast  %></title>
       <meta name="description" content="<%= meta_description %>">
+      <%= favicon_link_tag "logoqr.png", rel: "icon", type: "image/png" %>
 
       <!-- Facebook Open Graph data -->
       <meta property="og:title" content="<%= meta_title %>" />
