--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= PaidFast  %></title>
+    <title><%= "PaidFast | Go Cashless With PaidFast" %></title>
       <meta name="description" content="<%= meta_description %>">
       <%= favicon_link_tag "logoqr.png", rel: "icon", type: "image/png" %>
 
