--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,6 +1,6 @@
-<% content_for :meta_title, "#{@product.name} is on #{DEFAULT_META["meta_product_name"]}" %>
-<% content_for :meta_description, @product.description %>
-<% content_for :meta_image, cl_image_tag("da67a2c24a87e5a4f6a3b11e53b39b08") %>
+<%# <% content_for :meta_title, "#{@product.name} is on #{DEFAULT_META["meta_product_name"]}" %>
+<%# <% content_for :meta_description, @product.description %>
+<%# <% content_for :meta_image, cl_image_tag("da67a2c24a87e5a4f6a3b11e53b39b08") %>
 
 
   <% if current_user.product.blank? %>
