--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -21,7 +21,7 @@
   padding: 10px;
   }
 
-btn2 {
+.btn2 {
 padding: 15px 25px !important;
 border: unset !important;
 border-radius: 15px!important;
