--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,9 +19,9 @@
 
 body {
   padding-top: 50px;
-  padding-bottom: 100px;
-  background-color: #E4EDFD;
-  // background-color: #EEF0F4;
+  padding-bottom: 110px;
+  background-color: #E2EDFB;
+  // background-color: #EEF0F4;E4EDFD
 }
 .main-content {
   padding-top: 16px;
