--- a/app/assets/stylesheets/components/_header.scss
+++ b/app/assets/stylesheets/components/_header.scss
@@ -26,8 +26,8 @@ header h2 {
  //
 }
 .nav-item {
-  font-size: 20px!important;
-  font-weight: bold !important;
+  //font-size: 20px!important;
+  //font-weight: bold !important;
 
 }
 .nmstyle  {
