--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -11,8 +11,8 @@
   border-radius: 30px;
   background: linear-gradient(145deg, #E2EDFB, #f0f0f0);
   // background: linear-gradient(145deg, #EEF0F4, #f0f0f0);
-  box-shadow: 15px 15px 30px #bebebe,
-             -15px -15px 30px #ffffff;
+  box-shadow: 15px 15px 30px #dedede,
+             -15px -15px 35px #ffffff;
 }
 
 text {
