--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -6,10 +6,10 @@
   // background: linear-gradient(145deg, #EEF0F4, #f0f0f0);
   color: #4361EE;
   font-weight: 500;
-  box-shadow: 15px 15px 30px #bebebe,
-             -15px -15px 30px #ffffff;
+  box-shadow: 15px 15px 30px #dedede,
+              -15px -15px 35px #ffffff;
 }
-;
+
 .cardinfo {
   background: linear-gradient(145deg, #E2EDFB, #f0f0f0) !important;
   // background: linear-gradient(145deg, #EEF0F4, #f0f0f0) !important;
