--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -26,3 +26,12 @@ body {
 .main-content {
   padding-top: 16px;
 }
+
+.main-home-content {
+  padding-top: 0;
+}
+
+.body-home {
+  padding-top: 0;
+  padding-bottom: 0;
+}
