--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,14 @@
-<%= render 'shared/banner' %>
+<div class="banner">
+  <div class="container d-flex align-items-end h-100">
+    <div class="text-box w-100">
+      <h1>Get paid. Fast.</h1>
+      <p>Digitising payments for those who need it.</p>
+      <%= link_to dashboard_path, class: "btn homebutton mt-2 w-100" do %>
+        <div class="d-flex justify-content-center pr-3">
+          <%= image_tag("logoqr.png", width: 30) %>
+          <span class="buttontext">  Get started </span>
+        </div>
+      <% end %>
+    </div>
+  </div>
+</div>
