--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -43,11 +43,11 @@
 }
 
 .buttontext {
-  font-size: 10px;
+  font-size: 20px !important;
   margin-left: 12px;
   font-weight: 600;
 }
 
-.btn span {
-  font-size: 20px;
+.color {
+  color: #4CC9F0;
 }
