--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -13,6 +13,15 @@
              -15px -15px 45px #ffffff;
 }
 
+.cardmerchant {
+  padding: 20px;
+  border-radius: 30px;
+  background: #E2EDFB;
+  box-shadow: 15px 15px 40px #dedede,
+             -15px -15px 45px #ffffff;
+}
+
+
 .ishow {
   font-size: 4rem;
   color: #52b788;
