--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -2,15 +2,15 @@
 <%# <% content_for :meta_description, @product.description %>
 <%# <% content_for :meta_image, cl_image_tag("da67a2c24a87e5a4f6a3b11e53b39b08") %>
 
-
+<div class="container d-flex centercard justify-content-center align-middle">
   <% if current_user.product.blank? %>
-  <div class="container mt-3 p-4 shadow">
+  <div class="container cardmerchant">
     <h5 class="d-flex text-secondary justify-content-center mb-3">Create merchant account</h5>
     <%= simple_form_for @product, input_html: { class: 'form-control' } do |f| %>
     <%= f.input :name, label: 'Merchant Name'%>
     <%= f.input :photo, as: :file %>
     <%= f.input :description, label: 'Business Description' %>
-    <div class="d-flex justify-content-end">
+    <div class="d-flex justify-content-end mb-2">
       <%= f.button :submit, 'Get Started', class: 'submit' %>
     </div>
     <% end %>
@@ -21,3 +21,4 @@
     <button class="button-new">Receive Payment</button>
     </a>
   <% end %>
+</div>
