--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,5 +1,5 @@
 .banner {
-  background-image: image-url('homephone.png') !important;
+  background-image: image-url('homephone.png');
   height: 100vh;
   // width: 150px;
   background-size: cover;
