--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,7 +3,7 @@
     <div class="text-box w-100">
       <div class="d-flex">
       <h1 class="color"><strong>Get Paid. </strong></h1>
-      <h1 class="color2" data-controller="typed-js"></h1>
+      <h1 class="color2"><strong data-controller="typed-js"></strong></h1>
       </div>
       <p>Digitising payments for those who need it.</p>
 
