--- a/app/views/transactions/index.html.erb
+++ b/app/views/transactions/index.html.erb
@@ -1,5 +1,5 @@
 <div class="container my-3 pt-16">
-  <p class="text-secondary">Updated: <%= Time.now.strftime("%b %e, %l:%M %p") %></p>
+  <p class="text-secondary">Updated: <%= (Time.now + 1.hours).strftime("%b %e, %l:%M %p") %></p>
   <div class="cards-grid-2 mt-1">
   <% @transactions.each do |transaction| %>
     <%= link_to transaction_path(transaction), class: "d-flex card cardinfo rounded-4 my-2 text-decoration-none pt-3 px-3" do %>
@@ -12,7 +12,7 @@
         <% end %>
           <div class="flex-column justify-content-center d-flex flex-grow-1 px-3">
             <h6  class="text"><%= transaction.customer_name %></h6>
-            <div><p class="text-secondary"><%= transaction.timestamp.strftime("%b %e, %l:%M %p") %><p></div>
+            <div><p class="text-secondary"><%= (transaction.timestamp + 2.hours).strftime("%b %e, %l:%M %p") %><p></div>
           </div>
           <h5 class="text">€<%= transaction.price.to_f.round %></h5>
         </div>
