--- a/app/views/transactions/show.html.erb
+++ b/app/views/transactions/show.html.erb
@@ -18,7 +18,7 @@
           <h3 class="text pt-3"><%= humanized_money_with_symbol(@transaction.price)%></h3>
           <h5 class="text">from <%= @transaction.customer_name %></h5>
             <div class="">
-              <h6 class="pt-4 text-secondary"> <%= @transaction.timestamp.strftime("%b %e, %l:%M %p") %></h6>
+              <h6 class="pt-4 text-secondary"> <%= (@transaction.timestamp + 2.hours).strftime("%b %e, %l:%M %p") %></h6>
             </div>
             <% else %>
               <h1 class="mb-0 text-danger"><i class="fa-solid fa-xmark ishow"></i></h1>
